# dragons

./: .gitignore  README.md  pyproject.toml
characters/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
characters/migrations/: 0001_initial.py
config/: settings.py  urls.py
game/: admin.py  forms.py  models.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_auto_20210415_1720.py  0003_game_gamecharacters.py
static/css/: game.css  new-character.css  style.css
staticfiles/css/: game.css  new-character.css  style.css
templates/: 404.html  500.html  ability_check.html  action.html  char_view.html  character_detail.html  create.html  game_detail.html  generic_form.html  homepage.html  index.html  landing.html  user_game_list.html
templates/auth/: edit_profile.html  generic_form.html  register.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210406_2108.py
